# form-builder-vs

./: .env.example  .gitignore  DEPLOYMENT.md  DOCKER_SETUP.md  GETTING_STARTED.md  QUICK_REFERENCE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14ecaa84cb86_add_foreign_key_constraint_to_.py  25368d9dcc5f_initial_migration_with_templates_.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  pdf.py  submissions.py  templates.py  upload.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py
backend/app/models/: template.py
backend/app/schemas/: template.py
backend/app/services/: image_service.py  pdf_service.py
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FieldEditorPopup.tsx  FieldOverlay.tsx  ImageUpload.tsx  LoginForm.tsx  PreviewCanvas.tsx  TemplateBuilder.tsx  TemplateCanvas.tsx  TemplateSelector.tsx  Toolbar.tsx
frontend/src/services/: api.ts
frontend/src/stores/: appStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: fontSizing.ts  positioning.ts
